# translation-api

./: .gitignore  README.md  pyproject.toml  test_client.py
app/: config.py  main.py  mt.py  pipeline.py  stt.py  tts.py
deploy/: deploy.sh  start.sh
scripts/: bench_texts.json  bench_translate.py  download_models.py  mt_hf_probe.py  test_ws.py
